--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 tensorflow-cpu
-pillow
+pillow~=9.5.0
 tk
-flask
-requests
-numpy
+flask~=2.2.3
+requests~=2.28.2
+numpy~=1.23.5
 pylint
 jupyter
+boto3
+python-dotenv
+flack~=1.3.7
 dvc
